# guardsuite-specs

./: .coverage  .gitignore  .pre-commit-config.yaml  AI_INPUT_CONTRACT.md  AI_OUTPUT_CONTRACT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PIL_README.md  README.md  SECURITY.md  ai-dev-report-latest.md  ai_analysis.yml  mkdocs.yml  pil_checklist.md  product.yml  project_map.yml  pyproject.toml  repo-scanner.py  repo_contract.yml  repo_scan_raw.json  repos_index.scan.json  repos_index.yml  rule_spec_validation_report.md  rule_spec_validation_results.json  scoring_kpis.yml  semantic_runtime_capability_topology.schema.yml  semantic_runtime_capability_topology.yml  task_contract.yml  test_results_phase2.txt  test_results_phase2_summary.md
.github/: copilot-instructions.md
.logs/: ai-dev-latest.md  ai-dev-report-latest.md
.pil_venv/: pyvenv.cfg
ai_reports/: adapter_pytest_results.xml  adapter_pytest_summary.txt  checklist_evidence_engine_log.json  checklist_evidence_map.json  checklist_mapping_proposal.json  checklist_patch.apply.txt  checklist_patch_dryrun.patch  checklist_update_log.json  evidence_summary.json  file_commits.txt  perf_results.json  phase3_activation_roadmap.json  phase3_blocking_matrix.json  phase3_pre_activation_checklist.md  phase4_finalization_certificate.md  phase5_activation_readiness_gate.json  phase5_full_verification.json  phase5_pilot_report.json  progress_with_evidence.json  pytest_full_run.txt
ai_reports_multi/: scan_summary.csv  scan_summary.json
ai_reports_multi_refresh/: scan_summary.csv  scan_summary.json
(+707 files in other folders)
